--- a/css/style.css
+++ b/css/style.css
@@ -5,20 +5,11 @@
     line-height: 1.5;
 }
 
-
-body {
-    height: 100vh;
-}
-
 .wrapper {
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 80vw;
-    height: 100vh;
-    margin: 0 10vw;
-    border: 1px solid black;
-    margin-bottom: 10vh;
+    width: 100vw;
+    min-height: 100vh;
 }
 
 .img-area {
@@ -26,8 +17,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    flex: 2;
-    height: 100%;
+    flex: 1;
 }
 
 .logo-box {
@@ -36,18 +26,19 @@ body {
     align-items: center;
     background-color: rgb(26 16 16 / 40%);
     position: relative;
-    height: 12vh;
+    height: auto;
     top: 25vh;
     padding: 10px 20px;
     gap: 10px;
     color: lightblue;
-    font-size: 24px;
-    text-align: center;
+    font-size: 26px;
+    font-family: 'Skranji', cursive, sans-serif;
+    font-weight: 700;
 
 }
 
 .logo-box > img {
-    height: 120%;
+    height: 12vh;
 }
 
 .credit {
@@ -64,8 +55,7 @@ a {
 
 
 .content {
-    height: 100%;
-    flex: 5;
+    flex: 2;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -97,10 +87,9 @@ a {
 .input-box {
     display: flex;
     flex-flow: column wrap; 
-    width: 35%;
+    min-width: 25vw;
     text-align: left;
 }
-
 
 .input-box > label {
     color: gray;
@@ -136,5 +125,23 @@ a {
     align-items: center;
     flex: 1;
     font-size: 20px;
-    background-color: rgb(235 235 235);;
+    background-color: rgb(235 235 235);
+    min-height: 100px;
+
+}
+
+@media only screen and (max-width: 700px) {
+    .wrapper {
+        flex-direction: column;
+    }
+    .img-area {
+        display: flex;
+        flex-flow:  column wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .logo-box, .credit {
+        position: static;
+        width: 100vw;
+    }
 }
